Make project build Java 8 compatible artifacts